--- a/RedCapCloud/RanorexAutomationHelpers/Ranorex Automation Helpers.csproj
+++ b/RedCapCloud/RanorexAutomationHelpers/Ranorex Automation Helpers.csproj
@@ -41,9 +41,6 @@
     <Reference Include="Ranorex.Core.Resolver">
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ranorex.PDF">
-      <HintPath>..\packages\Ranorex.ReportToPDF.1.0.13\lib\net40\Ranorex.PDF.exe</HintPath>
-    </Reference>
     <Reference Include="Ranorex.Plugin.Cef">
       <Private>False</Private>
     </Reference>
@@ -98,6 +95,9 @@
     <Reference Include="Ranorex.Plugin.Wpf">
       <Private>False</Private>
     </Reference>
+    <Reference Include="Ranorex.ReportToPDF">
+      <HintPath>..\packages\Ranorex.ReportToPDF.1.0.15\lib\net40\Ranorex.ReportToPDF.exe</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -114,47 +114,47 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <id>04594f99-62a2-4d0a-aaf3-b5bbe1c11e56</id>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Modules\CollectRetryErrorMessagesModule.cs">
-      <id>91292631-ec0b-4a88-9d58-c96cb53603b5</id>
+      <id>9172a08e-a22b-4739-8e2d-72ee338a34e6</id>
     </Compile>
     <Compile Include="Modules\EmailModule.cs">
-      <id>021a2f8c-5f7a-43c4-8c94-db14692df7b6</id>
+      <id>9271ac33-70c4-449d-9aa5-14f952eecfa0</id>
     </Compile>
     <Compile Include="Modules\ReportToPDFModule.cs">
-      <id>f476217b-1b74-4e80-891a-72e97795289d</id>
+      <id>163e177d-71c5-4ceb-8612-ff54ac0b947e</id>
     </Compile>
     <Compile Include="UserCodeCollections\DragNDropLibrary.cs">
-      <id>b43ec098-821b-4cc0-b279-2b4663d25b0b</id>
+      <id>92adf940-88ab-4012-9464-715a926ef5fb</id>
     </Compile>
     <Compile Include="UserCodeCollections\EmailLibrary.cs">
-      <id>288890be-6249-4b33-9035-b34de7bda89d</id>
+      <id>b0476d43-890d-499e-aa0f-478744750097</id>
     </Compile>
     <Compile Include="UserCodeCollections\FileLibrary.cs">
-      <id>cd111283-fa9c-419b-82a8-794051ddebad</id>
+      <id>3874159b-64fc-4687-bb20-65890a427dd3</id>
     </Compile>
     <Compile Include="UserCodeCollections\NumberGenerator.cs">
       <id>31e2f759-2a9a-4c05-a3ec-e3718faedc1a</id>
     </Compile>
     <Compile Include="UserCodeCollections\PopupWatcherLibrary.cs">
-      <id>457492d8-c996-4bb7-a62b-ffe71a42714d</id>
+      <id>3445aaab-c9d8-4e63-a0e9-80434bd40267</id>
     </Compile>
     <Compile Include="UserCodeCollections\StringLibrary.cs">
-      <id>44fa2802-594e-4ee9-b630-010dfcc47939</id>
+      <id>edfe6ded-c5ec-4a34-b321-668dc1edecd6</id>
     </Compile>
     <Compile Include="UserCodeCollections\SystemLibrary.cs">
-      <id>7fb79ea6-5ec8-4747-ae4e-5e8d460e7c38</id>
+      <id>65187f96-5c15-41df-8392-be2e6f956e49</id>
     </Compile>
     <Compile Include="UserCodeCollections\ValidationLibrary.cs">
-      <id>b69e5ec4-539e-495b-ae68-96f187a01a1d</id>
+      <id>14918587-cf8a-441f-8dbe-fc3889e999f8</id>
     </Compile>
     <Compile Include="UserCodeCollections\WebLibrary.cs">
-      <id>6dd9c653-998f-44ca-be76-214932ab9f1e</id>
+      <id>d546f677-5b4b-4465-a937-1fc820d8a075</id>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config">
+      <id>4048e5ec-6d61-42d7-9492-5443526eb777</id>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(RanorexTargetsPath)" Condition="Exists('$(RanorexTargetsPath)')" />
